# zephyr_samples

./: README.md
demoapp1/source/: CMakeLists.txt  prj.conf
demoapp1/source/boards/: stm32g474re_disco.conf  stm32g474re_disco.overlay
demoapp1/source/boards/arm/stm32g474re_disco/: stm32g474re_disco.dts
demoapp1/source/dts/stm32g474re_disco/: stm32g474re_disco.dtsi  stm32g474re_disco_i2c2_bus.dtsi  stm32g474re_disco_joystick.dtsi  stm32g474re_disco_leds.dtsi  stm32g474re_disco_spi1_bus.dtsi  stm32g474re_disco_spi3_bus.dtsi  stm32g474re_disco_timers17.dtsi  stm32g474re_disco_timers4.dtsi
demoapp1/source/src/: main.c
demoapp1/source/src/app_keypad/: app_keypad.c
demoapp1/source/src/app_pwm_motor/: app_pwm_motor.c
demoapp1/source/src/app_sd_card/: app_sd_card.c
demoapp1/source/src/app_tft_display/: app_tft_display.c
demoapp1/source/src/bmp388/: bmp388.c
demoapp1/source/src/include/: app_keypad.h  app_pwm_motor.h  app_sd_card.h  app_tft_display.h  app_tft_display_msgs.h  bmp388.h  demoapp_devices.h  main.h
fat_fs/source/: CMakeLists.txt
fat_fs/source/boards/: stm32g473_acme_cpu_c201.confold
fat_fs/source/boards/arm/stm32g473_acme_cpu_c201/: Kconfig.board  Kconfig.defconfig  board.h  pinmux.c  stm32g473_acme_cpu_c201.yaml  stm32g473_acme_cpu_c201_defconfig
fat_fs/source/boards/arm/stm32g474re_disco/: pinmux.c  stm32g474re_disco.dts  stm32g474re_disco_defconfig
fat_fs/source/dts/: acpu_c201.dtsi  acpu_c201_blower.dtsi  acpu_c201_dac1.dtsi  acpu_c201_exti_ctrl.dtsi  acpu_c201_gpios.dtsi  acpu_c201_i2c3_bus_seg1.dtsi  acpu_c201_i2c3_bus_seg3.dtsi  acpu_c201_menu.dtsi  acpu_c201_qspi1_bus.dtsi  acpu_c201_spi2_bus.dtsi  acpu_c201_spi3_bus.dtsi  acpu_c201_timers17.dtsi  acpu_c201_timers20.dtsi  acpu_c201_timers3.dtsi  acpu_c201_user_interface.dtsi  gpio_dt_defines.dtsi
fat_fs/source/dts/arm/st/g4/: stm32g473.dtsi  (+1 more)
fat_fs/source/dts/bindings/battery/: ti,bq25611d.yaml
fat_fs/source/dts/bindings/bldc/: ti,drv10975.yaml
fat_fs/source/dts/bindings/bsp/: bsp-blower.yaml
fat_fs/source/src/: main.c
input_capture/source/: CMakeLists.txt  prj.conf
input_capture/source/boards/: stm32g474re_disco.conf  stm32g474re_disco.overlay
input_capture/source/dts/: acpu_c201.dtsi  acpu_c201_blower.dtsi  acpu_c201_timers2.dtsi  acpu_c201_timers20.dtsi  acpu_c201_usart3.dtsi  gpio_dt_defines.dtsi  stm32g473re_disco_joystick.dtsi
input_capture/source/modules/: CMakeLists.txt  Kconfig
input_capture/source/modules/bsp_fan/: CMakeLists.txt  Kconfig  bsp_fan.c  bsp_fan.h
input_capture/source/modules/tim_ic/: CMakeLists.txt  Kconfig  Kconfig.stm32  tim_ic_stm32.c  tim_ic_stm32.h
input_capture/source/src/: main.c
shell_m2m/source/: CMakeLists.txt  prj.conf
shell_m2m/source/dts/: stm32g473re_disco.dtsi  stm32g473re_disco_usart1.dtsi
shell_m2m/source/src/: main.c
(+175 files in other folders)
